--- a/README.adoc
+++ b/README.adoc
@@ -107,7 +107,7 @@ In a web browser, access http://localhost:8080/gemfire-api/v1
 xd:> stream create process_sink --definition "queue:stocks >  transform --script='file:/Users/fmelo/FinanceStream/transform.groovy' | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Stocks --keyExpression=payload.getField('timestamp')" --deploy
 Created and deployed new stream 'process_sink'
 
-xd:>stream create http_source --definition "http > queue:stocks" --deploy
+xd:>stream create http_source --definition "http --port=9000 | splitter --expression=#jsonPath(payload,'$') > queue:stocks" --deploy
 Created and deployed new stream 'http_source'
 
 xd:>stream create yahoo_finance_source --definition "trigger --fixedDelay=1 | http-client --url='''https://query.yahooapis.com/v1/public/yql?q=select * from yahoo.finance.quote where symbol in (\"MSFT\")&format=json&env=store://datatables.org/alltableswithkeys''' --httpMethod=GET | splitter --expression=#jsonPath(payload,'$.query.results.quote')  > queue:stocks" --deploy
