--- a/README.adoc
+++ b/README.adoc
@@ -104,7 +104,7 @@ In a web browser, access http://localhost:8080/gemfire-api/v1
 ### Create streams in Spring XD
 
 ----
-xd:> stream create process_sink --definition "queue:stocks >  transform --script='file:/Users/fmelo/FinanceStream/transform.groovy' | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Stocks --keyExpression=payload.getField('timestamp')" --deploy
+xd:> stream create process_sink --definition "queue:stocks >  transform --script='file:transform.groovy' | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Stocks --keyExpression=payload.getField('timestamp')" --deploy
 Created and deployed new stream 'process_sink'
 
 xd:>stream create http_source --definition "http --port=9000 | splitter --expression=#jsonPath(payload,'$') > queue:stocks" --deploy
@@ -118,19 +118,19 @@ Created and deployed new stream 'yahoo_finance_source'
 * Stream 2 can be done through either a *Gem subscription* or a *tap*:
 
 ----
-xd:>stream create r_process --definition "gemfire --regionName=Stocks --useLocator=true --host=localhost --port=10334 | shell --command='Rscript /Users/fmelo/FinanceStream/nn_evaluate_jordan.R' | splitter --expression=#jsonPath(payload,'$') | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Predictions --keyExpression=payload.getField('timestamp')  " --deploy
+xd:>stream create r_process --definition "gemfire --regionName=Stocks --useLocator=true --host=localhost --port=10334 | shell --command='Rscript nn_evaluate_jordan.R' | splitter --expression=#jsonPath(payload,'$') | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Predictions --keyExpression=payload.getField('timestamp')  " --deploy
 ----
 
 *or*
 
 ----
-xd:>stream create r_process --definition "tap:stream:process_sink.transform > object-to-json | shell --command='Rscript /Users/fmelo/FinanceStream/nn_evaluate_jordan.R' | splitter --expression=#jsonPath(payload,'$') | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Predictions --keyExpression=payload.getField('timestamp') " --deploy
+xd:>stream create r_process --definition "tap:stream:process_sink.transform > object-to-json | shell --command='Rscript nn_evaluate_jordan.R' | splitter --expression=#jsonPath(payload,'$') | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Predictions --keyExpression=payload.getField('timestamp') " --deploy
 ----
 
 Deploy the simulator:
 
 ----
-xd:>stream create simulator --definition "trigger --fixedDelay=20  | http-client --url='''http://localhost:8080/gemfire-api/v1/queries/adhoc?q=SELECT%20DISTINCT%20*%20FROM%20/Stocks%20s%20ORDER%20BY%20java.util.Random.nextInt()%20LIMIT%2010000''' --httpMethod=GET | splitter --expression=#jsonPath(payload,'$') | transform --script='file:/Users/fmelo/FinanceStream/randomize.groovy' > queue:stocks " --deploy
+xd:>stream create simulator --definition "trigger --fixedDelay=20  | http-client --url='''http://localhost:8080/gemfire-api/v1/queries/adhoc?q=SELECT%20DISTINCT%20*%20FROM%20/Stocks%20s%20ORDER%20BY%20java.util.Random.nextInt()%20LIMIT%2010000''' --httpMethod=GET | splitter --expression=#jsonPath(payload,'$') | transform --script='file:randomize.groovy' > queue:stocks " --deploy
 ----
 
 * At each a few minutes, it's time to train the network using the script __nn_train_jordan.R__
@@ -138,7 +138,7 @@ xd:>stream create simulator --definition "trigger --fixedDelay=20  | http-client
 That can be done through a stream in XD or even as a batch. For simplicity, let's use streams:
 
 ----
-xd:>stream create trainstream --definition "trigger --fixedDelay=300 | shell --command='Rscript /Users/fmelo/FinanceStream/nn_train_jordan.R' | log " --deploy
+xd:>stream create trainstream --definition "trigger --fixedDelay=300 | shell --command='Rscript nn_train_jordan.R' | log " --deploy
 ----
 
 ## UI using D3
