--- a/Readme-docker.adoc
+++ b/Readme-docker.adoc
@@ -42,7 +42,7 @@ $ docker run --name geode-server -d -p 40404:40404 -p 8080:8080 --link geode-loc
 
 [source,bash]
 ----
-$ docker run -t -i --link geode-locator:geode-locator --link geode-server:geode-server fredmelo/financestreamdemo-geode sh data/setup.sh
+$ docker run -t -i --link geode-locator:geode-locator --link geode-server:geode-server --link geode-locator:geode-locator fredmelo/financestreamdemo-geode sh data/setup.sh
 ----
 
 
@@ -50,14 +50,14 @@ $ docker run -t -i --link geode-locator:geode-locator --link geode-server:geode-
 
 [source,bash]
 ----
-$ docker run -d -p 9393:9393 --name xd-server --link geode-server:geode-server fredmelo/financestreamdemo-streaming sh streaming/startXD.sh
+$ docker run -d -p 9393:9393 --name xd-server --link geode-server:geode-server --link geode-locator:geode-locator  fredmelo/financestreamdemo-streaming sh streaming/startXD.sh
 ----
 
 - XD Shell / stream setup
 
 [source,bash]
 ----
-$ docker run  --link xd-server:xd-server --link geode-server:geode-server fredmelo/financestreamdemo-streaming sh streaming/startStreaming.sh
+$ docker run  --link xd-server:xd-server fredmelo/financestreamdemo-streaming sh streaming/startStreaming.sh
 ----
 
 ### Additional containers
@@ -66,7 +66,7 @@ $ docker run  --link xd-server:xd-server --link geode-server:geode-server fredme
  
 [source,bash]
 ----
-$ docker run -t -i --link geode-server:geode-server fredmelo/financestreamdemo-geode gfsh
+$ docker run -t -i --link geode-server:geode-server --link geode-locator:geode-locator  fredmelo/financestreamdemo-geode gfsh
 ----
  
  - Build Simulator container
@@ -80,7 +80,7 @@ $ docker build --force-rm=true -t fredmelo/financestreamdemo-simulator -f Docker
  
 [source,bash]
 ----
-$ docker run -d -P  --name simulator --link xd-server:xd-server --link geode-server:geode-server fredmelo/financestreamdemo-simulator ./gradlew run
+$ docker run -d -P  --name simulator --link xd-server:xd-server --link geode-locator:geode-locator  --link geode-server:geode-server fredmelo/financestreamdemo-simulator ./gradlew run
 ----
 
 ### Useful info
