--- a/README.adoc
+++ b/README.adoc
@@ -103,41 +103,43 @@ In a web browser, access http://localhost:8080/gemfire-api/v1
 
 ### Create streams in Spring XD
 
+* Start with the base stream
+
 ----
-xd:> stream create process_sink --definition "queue:stocks >  transform --script='file:transform.groovy' | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Stocks --keyExpression=payload.getField('entryTimestamp')" --deploy
+xd:> script --file stream-base.xd
+
+stream create process_sink --definition "queue:stocks >  transform --script='file:transform.groovy' | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Stocks --keyExpression=payload.getField('entryTimestamp')" --deploy
 Created and deployed new stream 'process_sink'
-
-xd:>stream create http_source --definition "http --port=9000 | splitter --expression=#jsonPath(payload,'$') > queue:stocks" --deploy
+stream create http_source --definition "http --port=9000 | splitter --expression=#jsonPath(payload,'$') > queue:stocks" --deploy
 Created and deployed new stream 'http_source'
+----
+* If you want to show online quotes (need to be in market hours):
 
-xd:>stream create yahoo_finance_source --definition "trigger --fixedDelay=1 | http-client --url='''https://query.yahooapis.com/v1/public/yql?q=select * from yahoo.finance.quote where symbol in (\"TSLA\")&format=json&env=store://datatables.org/alltableswithkeys''' --httpMethod=GET | splitter --expression=#jsonPath(payload,'$.query.results.quote')  > queue:stocks" --deploy
+----
+xd:> script --file stream-online-quotes.xd
+
+stream create yahoo_finance_source --definition "trigger --fixedDelay=1 | http-client --url='''https://query.yahooapis.com/v1/public/yql?q=select * from yahoo.finance.quote where symbol in (\"TSLA\")&format=json&env=store://datatables.org/alltableswithkeys''' --httpMethod=GET | splitter --expression=#jsonPath(payload,'$.query.results.quote')  > queue:stocks" --deploy
 Created and deployed new stream 'yahoo_finance_source'
 ----
-
-
-* Stream 2 can be done through either a *Gem subscription* or a *tap*:
+* If you want to show predictions:
 
 ----
-xd:>stream create r_process --definition "gemfire --regionName=Stocks --useLocator=true --host=localhost --port=10334 | shell --command='Rscript nn_evaluate_jordan_ema.R' | splitter --expression=#jsonPath(payload,'$') | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Predictions --keyExpression=payload.getField('entryTimestamp')  " --deploy
+xd:> script --file stream-predictions.xd
+
+stream create r_process --definition "tap:stream:process_sink.transform > object-to-json | shell --command='Rscript nn_evaluate_jordan_ema.R' | splitter --expression=#jsonPath(payload,'$') | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Predictions --keyExpression=payload.getField('entryTimestamp') " --deploy
+Created and deployed new stream 'r_process'
+stream create trainstream --definition "trigger --fixedDelay=10 | shell --command='Rscript nn_train_jordan_ema.R' | log " --deploy
+Created and deployed new stream 'trainstream'
 ----
 
-*or*
+
+## Using the simulator:
+
+The simulator replays random 1000 quotes previously stored on GemFire / Geode
 
 ----
-xd:>stream create r_process --definition "tap:stream:process_sink.transform > object-to-json | shell --command='Rscript nn_evaluate_jordan_ema.R' | splitter --expression=#jsonPath(payload,'$') | gemfire-json-server --useLocator=true --host=localhost --port=10334 --regionName=Predictions --keyExpression=payload.getField('entryTimestamp') " --deploy
-----
-
-Deploy the simulator:
-----
-java -jar FinanceStreamSimulator/build/libs/FinanceStreamSimulator.jar --numberOfMessages=1000
-----
-
-* Every few seconds the network is re-trained using the script __nn_train_jordan_ema.R__
-
-That can be done through a stream in XD or even as a batch. For simplicity, let's use streams:
-
-----
-xd:>stream create trainstream --definition "trigger --fixedDelay=10 | shell --command='Rscript nn_train_jordan_ema.R' | log " --deploy
+$ cd FinanceStreamSimulator
+$ ./gradlew run
 ----
 
 ## UI using JavaFX
@@ -147,5 +149,6 @@ The UI for the application uses JavaFX and acting as Geode client can subscribe 
 Under JavaFXChart directory you can build/execute the client:
 
 ----
-./gradle runfx
+$ cd JavaFXChart
+$ ./gradlew run
 ----
